--- a/app/views/site/faq.html.erb
+++ b/app/views/site/faq.html.erb
@@ -12,7 +12,7 @@
 <div id="narrow_right_content">
   <div class="sect">
     <h2></h2>
-    <%=render :partial=>'shared/help_sidebar_menu'%>
+    <%=render :partial=>'help_sidebar_menu'%>
   </div>
 </div>
 <div class="cb"></div>
