--- a/app/views/layouts/training_layout.html.erb
+++ b/app/views/layouts/training_layout.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <title><%=h @title ? @title : 'WeFootball - 没事踢踢球儿才是正经事~'%></title>
+  <title><%=h @title ? @title : "#{h(@team.shortname)}的训练"%></title>
   <%= stylesheet_link_tag 'wefootball' %>
   <%= yield :stylesheet%>
   <%= javascript_include_tag "jquery-1.2.3/jquery-1.2.3.min.js" %>
@@ -18,9 +18,12 @@
 <div id="main_content">
   <div id="header">
     <a id="site_link" href="/"></a>
-    <%= link_to image_tag("footballboy3.jpg", :title=>"WeFootball"), "/", :id=>"header_icon" %>
+    <%= link_to team_image_tag(@team), team_view_path(@team), :id=>"header_icon" %>
+    <%= link_to h(@team.shortname), team_view_path(@team), :id=>"header_name"%>
 
     <%= render(:partial => 'layouts/header_setting')%>
+    <%= render(:partial => 'layouts/user_menu')%>
+
     <%= render(:partial => 'layouts/search_panel', :locals => {:default => :user})%>
   </div>
 
