--- a/app/views/layouts/user_layout.html.erb
+++ b/app/views/layouts/user_layout.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <title><%=h @title ? @title : h(@user.nickname)%></title>
+  <title><%=h @title ? @title : (logged_in? ? h(current_user.nickname) : "WeFootball - 没事踢踢球儿才是正经事~")%></title>
   <%= stylesheet_link_tag 'wefootball' %>
   <%= yield :stylesheet%>
   <%= javascript_include_tag "jquery-1.2.3/jquery-1.2.3.min.js" %>
@@ -18,11 +18,18 @@
 <div id="main_content">
   <div id="header">
     <a id="site_link" href="/"></a>
-    <%= link_to user_image_tag(@user), user_view_path(@user), :id=>"header_icon" %>
-    <%= link_to h(@user.nickname), user_view_path(@user), :id=>"header_name"%>
+    <%if logged_in?%>
+      <%= link_to user_image_tag(current_user), user_view_path(current_user), :id=>"header_icon" %>
+    <%else%>
+      <%= link_to image_tag("footballboy3.jpg", :title=>"WeFootball"), "/", :id=>"header_icon" %>
+    <%end%>
+    
+    <%if logged_in?%>
+      <%= link_to h(current_user.nickname), user_view_path(current_user), :id=>"header_name"%>
+    <%end%>
 
     <%= render(:partial => 'layouts/header_setting')%>
-    <%= render(:partial => 'layouts/user_menu', :locals => {:user => @user})%>
+    <%= render(:partial => 'layouts/user_menu')%>
 
     <%= render(:partial => 'layouts/search_panel', :locals => {:default => :user})%>
   </div>
