--- a/app/views/official_teams/index.html.erb
+++ b/app/views/official_teams/index.html.erb
@@ -1,7 +1,7 @@
 <div id="wide_left_content" class="sect">
   <h2><%=h @title%></h2>
   <%@official_teams.each do |official_team|%>
-    <div class="icon">
+    <div class="icon ot_icon">
       <%= link_to official_team_image_tag(official_team), edit_official_team_path(official_team.id)%>
       <span><%=link_to h(official_team.name), edit_official_team_path(official_team.id)%></span>
     </div>
