--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <%= error_messages_for :user %>
   <% form_for :user, :url => users_path do |f| -%>
 
-  <p><label for="email">你的Email</label><br/>
+  <p><label for="email">你的Email <span class="optional">(不推荐使用hotmail、pku邮箱，可能无法收到确认邮件)</span></label><br/>
   <%= f.text_field :login, :size=>30, :maxlength=>40 %></p>
 
   <p><label for="password">设一下密码</label><br/>
@@ -13,7 +13,7 @@
   <%= f.password_field :password_confirmation, :size=>30, :maxlength=>40 %></p>
 
   <p><%= submit_tag '注册' %>
-  &nbsp;&nbsp;&nbsp;&nbsp;> <%= link_to "已经注册, 登录", new_session_path%></p>
+  &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "> 已经注册, 登录", new_session_path%></p>
   <% end -%>
 </div>
 
