--- a/app/views/official_teams/index.html.erb
+++ b/app/views/official_teams/index.html.erb
@@ -10,6 +10,12 @@
 <div id="narrow_right_content" class="sect">
   <h2></h2>
   <ul class="sidebar_menu">
+    <li>
+    > <%= link_to "未来#{OfficialMatchesController::RECENT_DAYS}天内最受关注的比赛", official_matches_path %>
+    </li>
+    <li>
+      > <%= link_to "过去#{OfficialMatchesController::HISTORY_DAYS}天内最受关注的比赛", history_official_matches_path %>
+    </li>
     <%if @is_editor%>
     <li>
       > <%= link_to '新建球队', new_official_team_path %>
