--- a/app/views/official_matches/_sidebar_menu.html.erb
+++ b/app/views/official_matches/_sidebar_menu.html.erb
@@ -5,10 +5,12 @@
   <li <%= selected_class_sidebar_menu_item(:action=>'history')%>>
     > <%= link_to "过去#{OfficialMatchesController::HISTORY_DAYS}天内最受关注的比赛", history_official_matches_path %>
   </li>
+  <li>
+    > <%= link_to '更多球队', official_teams_path %>
+  </li>
   <%if @is_editor%>
     <li> 
       > <%= link_to('新建比赛', new_official_match_path)%>
     </li>
   <%end%>
-  <li class='seperate'></li>
 </ul>
