--- a/app/views/official_teams/_form.html.erb
+++ b/app/views/official_teams/_form.html.erb
@@ -1,5 +1,8 @@
 <p><label for="name">队名</label><br/>
 <%= f.text_field :name, :maxlength=>15, :size=>30 %></p>
 
+<p><label for="category">所属类别</label><br/>
+<%= f.select :category, OfficialTeamModule::CATEGORY_LIST.map{|item| [OfficialTeamModule::CATEGORY[item],item]} %></p>
+
 <p><label for="description">球队简介 <span class="optional">(可选)</span></label><br/>
 <%= f.text_area :description, :cols=>40, :rows=>15 %></p>
