--- a/app/views/official_matches/_sidebar_menu.html.erb
+++ b/app/views/official_matches/_sidebar_menu.html.erb
@@ -6,7 +6,7 @@
     > <%= link_to "过去#{OfficialMatchesController::HISTORY_DAYS}天内最受关注的比赛", history_official_matches_path %>
   </li>
   <li>
-    > <%= link_to '更多球队', official_teams_path %>
+    > <%= link_to '查看所有球队', official_teams_path %>
   </li>
   <%if @is_editor%>
     <li> 
