--- a/app/views/shared/_highlight_calendar.html.erb
+++ b/app/views/shared/_highlight_calendar.html.erb
@@ -44,7 +44,9 @@
     <%if i==0%>
       <div class="normalDateDiv monthAndYearDiv">
         <%= month_calendar_link(date.strftime("%Y-%m"), date, @user || @team || @official_team)%><br/>
-        <%= icalendar_path "#{image_tag('ical.gif')}",  @user || @team, :class=>"icalendar", :title=>"iCalendar"%>
+        <%if @user || @team%>
+          <%= icalendar_path "#{image_tag('ical.gif')}",  @user || @team, :class=>"icalendar", :title=>"iCalendar"%>
+        <%end%>
       </div>
     <%end%>
     <% date = date.tomorrow %>
