--- a/app/views/official_teams/edit.html.erb
+++ b/app/views/official_teams/edit.html.erb
@@ -31,7 +31,7 @@
   <h2></h2>
   <ul class="sidebar_menu">
     <li>
-      > <%= link_to '返回球队列表', official_teams_path %>
+      > <%= link_to '返回球队首页', @official_team %>
     </li>
   </ul>
 </div>
