--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <div id="footer">
   <span class="arrd">
-  © 2008 WeFootball.org, All Rights Reserved
+  © 2008-2010 WeFootball.org, All Rights Reserved
   </span>
   <span class="links">
   <%= link_to '关于我们', site_about_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
   <%= link_to '站务论坛', site_posts_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href="http://blog.wefootball.org">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-  <%= link_to '隐私原则', site_privacy_path %>
+  <%= link_to '隐私原则', site_privacy_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <a href="http://sakinijino.com" target="_blank">Blog</a>
   </span>
   <div class="cb"></div>
 </div>
