--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -1,6 +1,6 @@
 <%content_for(:javascript) do%>
-  <%= javascript_include_tag "jquery-1.2.3/ui.mouse.js" %>
-  <%= javascript_include_tag "jquery-1.2.3/ui.dialog.js" %>
+  <%= javascript_include_tag "jquery/ui.core.js" %>
+  <%= javascript_include_tag "jquery/ui.dialog.js" %>
 <%end%>
 
 <div id="left_content">
