--- a/app/views/user_views/show.html.erb
+++ b/app/views/user_views/show.html.erb
@@ -1,6 +1,6 @@
 <%content_for(:javascript) do%>
-  <%= javascript_include_tag "jquery-1.2.3/ui.mouse.js" %>
-  <%= javascript_include_tag "jquery-1.2.3/ui.dialog.js" %>
+  <%= javascript_include_tag "jquery/ui.core.js" %>
+  <%= javascript_include_tag "jquery/ui.dialog.js" %>
 <%end%>
 
 <div id="left_content">
@@ -130,25 +130,16 @@
     <%= user_icon(@friends)%>
     <div class="cb"></div>
   </div>
-</div>
 
-<div id="right_content">
-  <%if logged_in? && @user.id == current_user.id && @bcs.size > 0%>
-    <div class="sect">
-      <h2><%=smart_nickname @user%>朋友和球队的广播 <%= link_to "(更多广播...)", broadcasts_path %></h2>
-      <%for bc in @bcs%>
-        <%=broadcast_text(bc) %>
-      <%end%>
-    </div>
-  <%end%>
-  
   <%if logged_in? && @user.id == current_user.id && @posts.size > 0%>
     <div class="sect">
       <h2><%=smart_nickname @user%>的讨论更新 <%= link_to "(更多讨论更新...)", related_posts_path %></h2>
-      <%=render :partial=>'posts/many_teams_post_list', :object=>@posts%>
+      <%=render :partial=>'posts/narrow_many_teams_post_list', :object=>@posts%>
     </div>
   <%end%>
+</div>
 
+<div id="right_content">
   <%if @recent_activity != nil%>
     <div class="sect">
       <h2><%=smart_nickname @user%>最近一次活动</h2>
@@ -157,6 +148,15 @@
         <%= render :partial => 'shared/activity', :object => @recent_activity%>
         <div class="cb"></div>
       </div>
+    </div>
+  <%end%>
+
+  <%if logged_in? && @user.id == current_user.id && @bcs.size > 0%>
+    <div class="sect">
+      <h2><%=smart_nickname @user%>朋友和球队的广播 <%= link_to "(更多广播...)", broadcasts_path %></h2>
+      <%for bc in @bcs%>
+        <%=broadcast_text(bc) %>
+      <%end%>
     </div>
   <%end%>
 
