--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <%= error_messages_for :user %>
   <% form_for :user, :url => users_path do |f| -%>
 
-  <p><label for="email">你的Email <span class="optional">(不推荐使用hotmail、pku邮箱，可能无法收到确认邮件)</span></label><br/>
+  <p><label for="email">你的Email <span class="optional">(推荐使用gmail)</span></label><br/>
   <%= f.text_field :login, :size=>30, :maxlength=>40 %></p>
 
   <p><label for="password">设一下密码</label><br/>
